--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br>
     <a href="https://www.allrecipes.com/recipe/264349/my-mango-lassi/">My Mango Lassi</a>
     <br>
-    <img src="assets/Mango lassi.jpg" alt="Mango lassi glass"/>
+    <img src="Assets/Mango lassi.jpg" alt="Mango lassi glass"/>
     <p>Mango lassi is very rich and luxurious drink with yogurt and mangoes. It is the perfect summer drink when served chilled.</p>
     <ul>
             <h3>Ingredients</h3>
