--- a/palakpaneer.html
+++ b/palakpaneer.html
@@ -1,5 +1,5 @@
 <h1>Palak Paneer recipe</h1>
-<img src="assets/image.webp" alt="Palak Paneer">
+<img src="Assets/image.webp" alt="Palak Paneer">
 <br>
 <a href="https://www.allrecipes.com/recipe/256164/easy-palak-paneer/">easy-palak-paneer</a>
 <ul>
