--- a/samosa.html
+++ b/samosa.html
@@ -1,5 +1,5 @@
 <h1>Samosa</h1>
-<img src="assets/samosa.jfif" alt="samosa in a leaf of bannana and green chutney">
+<img src="Assets/samosa.jfif" alt="samosa in a leaf of bannana and green chutney">
 <br>
 <a href="https://www.allrecipes.com/recipe/20871/samosas/">Samosa</a>
 <ul>
